*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.6 ===
* Added stretch and loop markers to the AudioChannel and AudioSample widgets.
* Added tk::Tab and tk::TabControl widgets.

=== 1.0.5 ===
* Updated build scripts.

=== 1.0.4 ===
* Added support of Windows operating system.
* Added support of modern C++ 11 standard and above.
* Updated build scripts.
* Added more formats for URLSink (Windows support).
* Fixed bug in ListBox widget that could result in memory corruption.
* Migrated from popup window arrangement paradigm to the tether paradigm.
* Added volume listing to the tk::FileDialog.
* Added element hovering for ListBox widget and derived ComboBox and ComboGroup widgets.

=== 1.0.3 ===
* Added Window::has_parent() method to check that window is embedded into another window.
* Added Display::enum_monitors() method to query current state of connected monitors.
* Added xrandr library dependency for the X.11-compatible systems.
* Updated window appearance algorithm.
* Added ipadding() property to the tk::Label widget.
* Updated build scripts.

=== 1.0.2 ===
* Added template get() method for the tk::Registry that allows to obtain widget of specific type.
* Updated key event handling algorithm in the tk::Window class.
* Added FileDialog::Search style for the 'Search' edit control.
* Changed the space allocation algorithm for the edit control (now border gap does not depend
  on border size).
* Renamed public method for prop::String from 'commit' to 'commit_value'.
* Fixed bug that could cause improper window sizing in several cases.

=== 1.0.1 ===
* Updated build scripts.

=== 1.0.0 ===
* Bugfixes for the tk::GraphDot widget.
* Added new Display::wait_events() method for polling display for incoming events.
* Updated rendering of tk::LedMeterChannel widget.
* Fixed NULL dereference when linking styles in the schema.